cmake_minimum_required(VERSION 3.12)
project(newProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(newProject main.cpp Problem_detail/Math/Combinator.cpp example.cpp Problem_detail/toutiao/test1.cpp Problem_detail/toutiao/test2.cpp Problem_detail/toutiao/test3.cpp Problem_detail/toutiao/test4.cpp Problem_detail/toutiao/test5.cpp Problem_detail/dfs/RecrusiveDFS/dfs.cpp Problem_detail/dfs/NonRecrusiveDFS.cpp Problem_detail/bfs/reBFS/reBFS.cpp Problem_detail/iqiyi/test1/test1.cpp Problem_detail/iqiyi/test2/test2.cpp Problem_detail/test/ptrace/ptrace.cpp Problem_detail/string/removeComments.cpp Problem_detail/string/firstMissingPositive.cpp Problem_detail/vector/remove.cpp)